cmake_minimum_required(VERSION 3.20.0)

set(GLOBAL_MODEL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/06-model/models")

# add_subdirectory(01)
# add_subdirectory(02-shader)
# add_subdirectory(03-texture)
# add_subdirectory(04-camera)
# add_subdirectory(05-shading)
# add_subdirectory(06-model)
# add_subdirectory(07-stencil)
# add_subdirectory(08-framebuffer)
# add_subdirectory(09-cubemap)
# add_subdirectory(10-geometry)
# add_subdirectory(11-instancing)
add_subdirectory(12-shadow)
